src/test/deca/syntax/valid/test_readint.deca
// Description:
//    utilisation de readint().
//
// Resultats:
//    je sais pas
//
// Historique:
//    crée le 11/01/2022

{

	readInt();
}