src/test/deca/syntax/invalid/test_parser_error_float-2.deca
// Description:
//    tests le parser pour des flottants
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe
//    test_lex ne doit pas donner d'erreur
//
// Historique:
//    crée le 17/01/2022

0x0x
